vlib/v/checker/tests/multi_value_method_err.out
vlib/v/checker/tests/multi_value_method_err.vv:1:7: error: cannot define method on multi-value
    1 | fn (v (int, int)) f() {}
      |       ~~~~~~~~~~
